--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 Introduction :
 
-Fertilizer Recommentation system for disease Prediction is a simple ML and DL based website which recommends the best crop to grow,
-fertilizers to use and the diseases caught by your crops.
+Fertilizer Recommentation system for disease Prediction is a simple ML and DL based website which recommends the best crop to grow,fertilizers to use and the diseases caught by your crops.
 
 Problem Statement :
 
